Bug #1826954 Pending friends card has extra white space under request message
Fixed warning status card-body to white, also fixed the warning
footer which was wrongly inheriting info color.

behatnotneeded

(cherry picked from commit 6cc2ccd036aa91ffdfad0889ad5de47153fde74e)

--- a/htdocs/theme/raw/sass/layout/card/_card-colors.scss
+++ b/htdocs/theme/raw/sass/layout/card/_card-colors.scss
@@ -89,13 +89,20 @@
             color: $state-warning-text;
         }
         .card-body {
-            background-color: $state-warning-bg;
+            background-color: $card-bg;
         }
         .card-footer {
-            background-color: scale-color($state-info-bg, $lightness: 70%);
+            background-color: scale-color($state-warning-bg, $lightness: 70%);
             color: $state-warning-text;
+            &:hover,
+            &:focus {
+                background-color: scale-color($state-warning-bg, $lightness: 80%);
+                .icon {
+                    color: $state-warning-text;
+                }
+            }
             .icon {
-                color: $theme-text-color;
+                color: $state-warning-text;
             }
         }
         .card-footer,
@@ -159,6 +166,13 @@
         .card-footer {
             background-color: $card-footer-bg;
             color: $state-submitted-text;
+            &:hover,
+            &:focus {
+                background-color: scale-color($state-submitted-bg, $lightness: 80%);
+                .icon {
+                    color: $state-submitted-text;
+                }
+            }
             .icon {
                 color: $state-submitted-text;
             }
